Version 1.2.x (2010-xx-xx)
	Added new drag/drop support for HTML5 running on Chrome beta.
	Added new multipart state for the features object. It's now possible to detect multipart support.
Version 1.2.2.1 (2010-05-04)
	Added new headers option, enables you to set custom headers for the upload requests.
	Fixed bug where the file extension checking was case sensitive.
Version 1.2.2 (2010-04-26)
	Added new file_data_name option that enables you to set the multipart file data param. Patch contributed by Alex Ganov.
	Added new FILE_SIZE_ERROR type that will be triggered if the user selected a file that is to large or zero bytes.
	Added new FILE_EXTENSION_ERROR type that will be triggered if you add a file with an invalid file extension.
	Added new required_features setting, enables you to specify a list of required features that the runtime must have.
	Fixed so the plupload.buildUrl function uses the UTF compatible encodeURIComponent method instead of escape.
	Fixed so that all file types can be selected if you don't specify a filter setting.
	Fixed so more valid HTTP status codes are accepted as valid responses.
	Fixed so all runtimes fills the features object with available features.
	Fixed some issues with the HTML4 runtime if there wasn't any existing forms on the page.
	Fixed some conflict issues with HTML4 runtime and forms with the input names of action or target.
	Fixed bug where some Gecko versions would produce exceptions when checking the HTTP status of a XHR.
Version 1.2.1 (2010-03-22)
	Fixed bug with incorrect aspect ratio in Flash image scaling.
	Fixed bug where chunked uploads could get scrambled in the Flash runtime. Patch contributed by Grady Werner.
	Fixed bug where a beta version of Chrome wouldn't handle drag/drop correctly because of missing drag effect.
	Fixed so the HTML 4 runtime displays N/A for file sizes and the progress is based on uploaded files instead of bytes.