@@ -1,6 +1,8 @@
 Version 1.2.x (2010-xx-xx)
 	Added new drag/drop support for HTML5 running on Chrome beta.
 	Added new multipart state for the features object. It's now possible to detect multipart support.
+	Added new getFeatures function to all runtime. Basic concept by Javier Martinez Fernandez.
+	Fixed bug where runtimes where initialized even if they didn't match the required_features setting.
 Version 1.2.2.1 (2010-05-04)
 	Added new headers option, enables you to set custom headers for the upload requests.
 	Fixed bug where the file extension checking was case sensitive.
